# notes

./: .envrc  .gitignore  AGENTS.md  Dockerfile  README.md  TODO.md  changes.md  docker-compose.yml  plan.md  pyproject.toml
.github/workflows/: ci.yml
agent_scripts/: agent.py
config/nginx/: configure-nginx-notes.reb00t.io.sh  notes.reb00t.io.conf
docs/: spec.md
scripts/: build.sh  deploy.sh  get_logs.sh  venv.rc
src/: main.py  streaming.py  tool_executor.py
src/agent_runtime/: __init__.py  notes_agent.py  tools.py
src/agents/: __main__.py  agent.py  claude_runner.py  claude_test.py  improve.py  mock_claude.py  opencode_runner.py  state.py
src/agents/prompts/: improve.md  plan.md  review.md
src/client_bridge/: __init__.py  channel.py  tools.py
src/pages/: __init__.py  bm25.py  claude_editor.py  data_store.py  embeddings.py  index.py  parser.py  routes.py  search.py  seed.py  store.py
src/static/notes/: api.js  app.css  app.js  bridge.js  page.css
src/templates/: index.html  login.html
test/: conftest.py  e2e.sh  test_bm25.py  test_bridge.py  test_claude_editor.py  test_data_store.py  test_improve.py  test_main.py  test_page_tools.py  test_parser.py  test_routes.py  test_seed.py  test_store.py  test_streaming.py
