[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "notes"
version = "0.1.0"
description = "TODO."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Marko Rosenmüller" }]
keywords = []
dependencies = [
]

[project.scripts]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "docs*"]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.25",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
